table_1/results/Table-wrapper-api_pre_nullaway.txt
/opt/table_1/versions/nullaway/table-api-pre/src/src/main/java/org/spacious_team/table_wrapper/api/MutableTableRow.java:39: error: [NullAway] initializer method does not guarantee @NonNull field row (line 45) is initialized along all control-flow paths (remember to check for exceptions or early returns).
@Data
^
    (see http://t.uber.com/nullaway )
/opt/table_1/versions/nullaway/table-api-pre/src/src/main/java/org/spacious_team/table_wrapper/api/CellDataAccessObject.java:128: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return (cell == null) ? null : getValue(cell);
        ^
    (see http://t.uber.com/nullaway )
/opt/table_1/versions/nullaway/table-api-pre/src/src/main/java/org/spacious_team/table_wrapper/api/ReportPage.java:179: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return null;
        ^
    (see http://t.uber.com/nullaway )
/opt/table_1/versions/nullaway/table-api-pre/src/src/main/java/org/spacious_team/table_wrapper/api/ReportPage.java:198: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return (row == null) ? null : row.getCell(address.getColumn());
        ^
    (see http://t.uber.com/nullaway )
/opt/table_1/versions/nullaway/table-api-pre/src/src/main/java/org/spacious_team/table_wrapper/api/EmptyTableRow.java:39: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return null;
        ^
    (see http://t.uber.com/nullaway )
/opt/table_1/versions/nullaway/table-api-pre/src/src/main/java/org/spacious_team/table_wrapper/api/EmptyTableRow.java:45: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return null;
        ^
    (see http://t.uber.com/nullaway )
/opt/table_1/versions/nullaway/table-api-pre/src/src/main/java/org/spacious_team/table_wrapper/api/EmptyTableRow.java:71: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return null;
        ^
    (see http://t.uber.com/nullaway )
/opt/table_1/versions/nullaway/table-api-pre/src/src/main/java/org/spacious_team/table_wrapper/api/AbstractTable.java:271: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return null;
        ^
    (see http://t.uber.com/nullaway )
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
8 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output. Run with --scan to get full insights.

* Get more help at https://help.gradle.org

BUILD FAILED in 1s
8
